--- a/CleanerSeeker/CleanerSeeker/JobSummaryView.xib
+++ b/CleanerSeeker/CleanerSeeker/JobSummaryView.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -36,9 +36,9 @@
                             <rect key="frame" x="0.0" y="0.0" width="300" height="180"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address test with big text, so I will be able to see problems, or not M5N 1A3 " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="W07-JM-Gvz">
-                                    <rect key="frame" x="8" y="8" width="284" height="80"/>
+                                    <rect key="frame" x="8" y="20" width="284" height="70"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="80" id="d6Q-FE-pvB"/>
+                                        <constraint firstAttribute="height" constant="70" id="d6Q-FE-pvB"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -83,7 +83,7 @@
                                 <constraint firstItem="gwk-42-sgo" firstAttribute="top" secondItem="v2u-Oa-h42" secondAttribute="top" constant="8" id="5jC-hm-2K6"/>
                                 <constraint firstItem="W07-JM-Gvz" firstAttribute="leading" secondItem="v2u-Oa-h42" secondAttribute="leading" constant="8" id="Bym-c7-8oP"/>
                                 <constraint firstItem="do9-hP-y5k" firstAttribute="centerX" secondItem="v2u-Oa-h42" secondAttribute="centerX" id="Hmz-Gl-fJe"/>
-                                <constraint firstItem="W07-JM-Gvz" firstAttribute="top" secondItem="v2u-Oa-h42" secondAttribute="top" constant="8" id="Ivv-lL-Ovp"/>
+                                <constraint firstItem="W07-JM-Gvz" firstAttribute="top" secondItem="v2u-Oa-h42" secondAttribute="top" constant="20" id="Ivv-lL-Ovp"/>
                                 <constraint firstAttribute="height" constant="180" id="KYP-lC-Pdd"/>
                                 <constraint firstItem="XvL-8Z-OMI" firstAttribute="centerX" secondItem="v2u-Oa-h42" secondAttribute="centerX" id="XE2-kt-2MP"/>
                                 <constraint firstAttribute="trailing" secondItem="gwk-42-sgo" secondAttribute="trailing" constant="8" id="q5z-hY-hnE"/>
