--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -499,22 +499,32 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Mq0-r1-9zg" userLabel="Input Fields Stack">
-                                        <rect key="frame" x="0.0" y="175" width="320" height="482.5"/>
+                                        <rect key="frame" x="0.0" y="175" width="320" height="526"/>
                                         <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Range" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mya-lw-w2J">
+                                                <rect key="frame" x="8" y="0.0" width="303" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5E-Wr-BCw">
-                                                <rect key="frame" x="8" y="0.0" width="303" height="55"/>
+                                                <rect key="frame" x="8" y="28.5" width="303" height="70"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="55" id="4i5-SI-8nZ"/>
+                                                    <constraint firstAttribute="height" constant="70" id="4i5-SI-8nZ"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="zZW-Pu-TDm" id="Ojb-Ow-1G5"/>
+                                                    <outlet property="delegate" destination="zZW-Pu-TDm" id="C8x-JW-b7R"/>
+                                                </connections>
                                             </pickerView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="General Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGT-Lg-cSK">
-                                                <rect key="frame" x="8" y="63" width="303" height="20.5"/>
+                                                <rect key="frame" x="8" y="106.5" width="303" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MUE-V0-KmG" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="91.5" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="135" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -523,7 +533,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bBQ-YG-IO8" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="129.5" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="173" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -532,13 +542,13 @@
                                                 </connections>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5n-mi-5In">
-                                                <rect key="frame" x="8" y="167.5" width="303" height="20.5"/>
+                                                <rect key="frame" x="8" y="211" width="303" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pthone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e8B-af-uaN" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="196" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="239.5" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
@@ -547,7 +557,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address 1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Acd-cY-DtZ" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="234" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="277.5" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -556,7 +566,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address 2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="byv-tr-bSa" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="272" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="315.5" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -565,7 +575,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ebg-yZ-HAR" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="310" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="353.5" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -574,7 +584,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Province" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gTf-lG-zGC" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="348" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="391.5" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -583,13 +593,13 @@
                                                 </connections>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Credentials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hr7-s7-Vh6">
-                                                <rect key="frame" x="8" y="386" width="303" height="20.5"/>
+                                                <rect key="frame" x="8" y="429.5" width="303" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bl4-9J-yBt" customClass="CSTextField" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="414.5" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="458" width="303" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -598,7 +608,7 @@
                                                 </connections>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Fy-3H-21r" customClass="CSSecondary" customModule="CleanerSeeker" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="452.5" width="303" height="30"/>
+                                                <rect key="frame" x="8" y="496" width="303" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="zo4-eZ-VDC"/>
                                                 </constraints>
@@ -611,7 +621,7 @@
                                         <edgeInsets key="layoutMargins" top="0.0" left="8" bottom="0.0" right="9"/>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSa-YS-UWc" customClass="CSSecondary" customModule="CleanerSeeker" customModuleProvider="target">
-                                        <rect key="frame" x="24" y="677.5" width="70" height="30"/>
+                                        <rect key="frame" x="24" y="721" width="70" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="70" id="PUb-jQ-05n"/>
                                             <constraint firstAttribute="height" constant="30" id="yeC-0n-vmO"/>
@@ -624,7 +634,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzE-Im-NaN" customClass="CSPrimary" customModule="CleanerSeeker" customModuleProvider="target">
-                                        <rect key="frame" x="246" y="677.5" width="50" height="30"/>
+                                        <rect key="frame" x="246" y="721" width="50" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="DAk-xp-IZW"/>
                                             <constraint firstAttribute="width" constant="50" id="QWx-ND-m89"/>
@@ -684,6 +694,8 @@
                         <outlet property="lastName" destination="bBQ-YG-IO8" id="VEs-FZ-fc4"/>
                         <outlet property="phone" destination="e8B-af-uaN" id="ebv-Fc-Zeb"/>
                         <outlet property="province" destination="gTf-lG-zGC" id="LPH-i3-sND"/>
+                        <outlet property="rangeLabel" destination="mya-lw-w2J" id="dIT-cO-9Mu"/>
+                        <outlet property="rangePicker" destination="b5E-Wr-BCw" id="mgw-MB-4YV"/>
                         <outlet property="scrollView" destination="Nnf-vS-oz5" id="uZx-9S-fe2"/>
                     </connections>
                 </viewController>
